[package]
name = "generative"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
image = "0.23.14"
regex = "1.5.4"
clap = "2.34.0"

[dev-dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }